# splashe.rs

./: .gitignore  Cargo.toml  LICENSE.md  README.md  main.js  style.css
src/: bin.rs  config.rs  copy.rs  lib.rs  site.rs  sites.rs
templates/: index.html
themes/night-goat/: theme.css
themes/persona-5/: theme.css
themes/underwater-train/: theme.css
