[package]
name = "splashers"
version = "0.1.0"
authors = ["Catherine Hart <katie@codehearts.com>"]
description = "Themeable splash page with fuzzy finding"
license = "MIT"
edition = "2018"

[lib]
name = "splashers"
path = "src/lib.rs"

[[bin]]
name = "splashers"
path = "src/bin.rs"

[dependencies]
log = "0.4"
tera = "1"
toml = "0.5"
env_logger = "0.7"
serde = { version = "1", features = ["derive"] }
